--- a/Final report/Final report.tex
+++ b/Final report/Final report.tex
@@ -172,7 +172,7 @@ As there are now 3 price vectors, the utility vector $V$ can be created by rando
 With the $V$ and $p$ vectors defined, the theoretical $X_i$ corresponding to each price vector $k$ can be created and they will represent the true demand. In the long run, the expected value of all data points for each price vector should be equal to the theoretical $X_i$.
 \newline
 \newline
-For each price vector, 20 data points were created as historical data in order to obtain our prior distribution. In order to ensure that the expected value of all data points was equal to the theoretical $X_i$, 10 epsilon vectors were created and the data points were obtained by adding and subtracting the epsilon vector from the theoretical $X_i$. This process was repeated for the other two price vectors as well. In total, there were 60 data points created with each price vector having 20 data points to serve as historical data.
+For each price vector, 20 data points were created as historical data in order to obtain our prior distribution. In order to ensure that the expected value of all data points was equal to the theoretical $X_i$, 10 epsilon vectors were created and the data points were obtained by adding and subtracting the epsilon vector from the theoretical $X_i$. The epsilons were randomly chosen to be real numbers in the range of 0 to 5\% of true demand. This process was repeated for the other two price vectors as well. In total, there were 60 data points created with each price vector having 20 data points to serve as historical data.
 
 \subsubsection{Implementation of classical TS}
 In this approach, the objective was to learn the true demand function under each price vector. It was assumed that the true demand functions followed normal distributions. The prior distribution for each price vector was then estimated from the 20 data points generated earlier using maximum likelihood estimation. 
@@ -277,7 +277,7 @@ We again compare the performance of Thompson sampling to other well-established 
 \end{figure}
 \newpage
 \subsection{Conclusion of first approach}
-In this section, we have seen that Thompson sampling is relatively robust as it worked well in two commonly used demand functions, namely the MNL model and the constant price elasticity model. It is worth noting that in both of these settings, we had reliable historical data since taking the mean of the data actually produced the true theoretical demand. Repeating the experiments with poor or no historical data (i.e. random initialisation of parameters) may yield interesting results in which other algorithms may possibly outperform Thompson sampling. Another possible extension would be to consider non-stationary demand functions as part of the non-stationary bandit problem.
+In this section, we have seen that Thompson sampling is relatively robust as it worked well in two commonly used demand functions, namely the MNL model and the constant price elasticity model. It is worth noting that in both of these settings, we had reliable historical data since taking the mean of the data actually produced the true theoretical demand. The variance of the historical data is also relatively small which reduces the probability of a random sample from a worse arm being better than a random sample from the best arm. It is very possible that repeating the experiments with poor or no historical data (i.e. random initialisation of parameters) will yield poorer results in which other algorithms may possibly outperform Thompson sampling. Another possible extension would be to consider non-stationary demand functions as part of the non-stationary bandit problem.
 
 \section{Second approach: Continuous prices}
 In this approach, the objective is to learn the true elasticity values for each product. We implement the Thompson sampling algorithm for dynamic pricing proposed by Ganti, Sustik, Tran \& Seaman (2018). In their paper, they consider the demand function to be a modified constant elasticity model. The commonly used constant elasticity model is 
